# isegame

./: README.md  pyproject.toml  requirements.txt
isegame/: __init__.py  __main__.py  game.py  routes.py  sense.py  ui.py
isegame_ui/: index.html  package-lock.json  package.json
isegame_ui/src/: App.tsx  client.ts  main.tsx
