[tool.poetry]
name = "isegame"
version = "0.1.0"
description = ""
authors = ["JSH32 <rudnik7000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.19.4"
asyncio = "^3.4.3"
hypercorn = "^0.15.0"
quart-schema = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "isegame:run"
